Add headline to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Моя тестовая страница</title>
   </head>
   <body>
+    <h1>First top app</h1>
     <img src="images/website-screenshot.png" alt="Моё тестовое изображение">
   </body>
 </html> 
