Добавил джаваскрипт, который выводит небольшое сообщение

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Моя тестовая страница</title>
   </head>
   <body>
-    <h1>First top app</h1>
+    <h1>First headline</h1>
     <img src="images/website-screenshot.png" alt="Моё тестовое изображение">
+
+    <script>
+      alert('Вывожу тест с помощью скрипта');
+    </script>
   </body>
 </html> 
