--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Моя тестовая страница</title>
+    <title>Страница для обучения</title>
   </head>
   <body>
 
@@ -42,6 +42,6 @@
         });
       }
     </script>
-
+<p><a href="rodents/index.html">Сайт с именными грызунками</a></p>
   </body>
 </html> 
